# fenshui_map

./: .gitignore  Dockerfile  README.md  firebase.json  requirements.txt
.github/workflows/: deploy-firebase-cloudrun.yml
app/: feng_shui_service.py  main.py  sheets.py
app/api/: schemas.py
app/core/: registry_a.py
app/modules/feng_shui/: models.py  service.py
app/modules/iching/: service.py
fortune-core/: .gitignore  README.md  pyproject.toml
fortune-core/scripts/: init_and_push_fortune_core.sh
fortune-core/src/fortune_core/: __init__.py  calendar.py  directions.py  elevation.py  enums.py  hexagrams.py
fortune-core/src/fortune_core/data/: __init__.py  hexagrams.json
fortune-core/tests/: test_directions.py  test_hexagrams.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: GsiToggle.tsx  LocationControl.tsx  MapView.tsx  ResultDrawer.tsx  index.ts
frontend/src/components/atoms/: AttributionBadge.tsx  FabButton.tsx  PrimaryActionButton.tsx  Spinner.tsx
frontend/src/components/molecules/: LayerToggleCard.tsx  LoadingToast.tsx
frontend/src/components/organisms/: BottomDrawer.tsx
scripts/: deploy_cloudrun.sh  set_gcp_secrets.sh  setup_workload_identity.sh
