[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortune-core"
version = "0.1.0"
description = "Shared core definitions for I Ching and feng shui applications"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "norinori-jan" }
]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fortune_core = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]